# jsonlogic-parser

./: jsonlogic.py  pyproject.toml
jsonlogic/: evaluate.py  exc.py  json.py  jsonlogic.py  op_function.py  operators.py
tests/jsonlogic/: test_operators.py
