[tool.poetry]
name = "jsonlogic"
version = "0.1.0"
description = ""
authors = ["Siobhán Sterrett <siobhansterrett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"
isort = "^5.13.2"

[tool.pytest.ini_options]
pythonpath = "jsonlogic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
